--- a/pages/quickstart/install.mdx
+++ b/pages/quickstart/install.mdx
@@ -7,14 +7,14 @@ In order to use Kizzy, you will need the following:
 
 1. A Discord account. If you don't already have one, you can create one for free at [discord.com](https://discord.com).
 
-2. A device running Android 8.1 or higher. Kizzy is compatible with Android 8.1 through 13.
-
+2. A device running Android 8.1 or higher. Kizzy is compatible with Android 8.1 through 14. *(note: may be buggy on Android 14 as it has not been fully tested yet.)*
+ 
 ## Install
 <div className="steps-container">
 ### Download and Install
 
 <Callout type="warning" emoji="⚠️">
-  Make sure that you use minimum 3GB of RAM.
+  Make sure that you have at least 3GB of RAM.
 </Callout>
 
 1. Download the latest Kizzy release from [github](https://github.com/dead8309/Kizzy/latest/releases) or [website](https://kizzy.vercel.app/download)
